Added new emb models, added embModel formatters

--- a/src/semantic_search/dev/embeddings.ipynb
+++ b/src/semantic_search/dev/embeddings.ipynb
@@ -11,13 +11,44 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel '.venv (Python 3.10.14)' due to a timeout waiting for the ports to get used. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "os.environ['TOKENIZERS_PARALLELISM'] = 'true'\n",
-    "\n",
     "import sys\n",
     "sys.path.append('/Users/luis/Desktop/ETH/Courses/SS25-DSL/src')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pymilvus import MilvusClient\n",
+    "client = MilvusClient()\n",
+    "client.list_collections()\n",
+    "# poetry run python -m semantic_search.store.create_store --store_type=milvus --store_name=mini1 --max_refs=100"
    ]
   },
   {
@@ -48,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -60,24 +91,20 @@
     }
    ],
    "source": [
-    "from semantic_search.store import models, milvus_store, store\n",
+    "from semantic_search.store import faiss_store, models, milvus_store\n",
     "from importlib import reload\n",
     "reload(models)\n",
     "reload(milvus_store)\n",
-    "reload(store)\n",
+    "reload(faiss_store)\n",
     "from semantic_search.store.models import LocalEmbeddingModel\n",
     "from semantic_search.store.milvus_store import MilvusDocumentStore\n",
-    "from semantic_search.store.store import FAISSDocumentStore\n",
+    "from semantic_search.store.faiss_store import FAISSDocumentStore\n",
     "\n",
-    "# if (ds := getattr(locals(), 'ds', None)) is not None:\n",
-    "#     print('Disconnecting client')\n",
-    "#     ds._disconnect_client()\n",
-    "\n",
-    "# ds = FAISSDocumentStore(\n",
-    "#     embedding_model=LocalEmbeddingModel(),\n",
-    "#     db_superdir='/Users/luis/Desktop/ETH/Courses/SS25-DSL/db',\n",
-    "#     store_name='test1',   \n",
-    "# )\n",
+    "ds = FAISSDocumentStore(\n",
+    "    embedding_model=LocalEmbeddingModel(),\n",
+    "    db_superdir='/Users/luis/Desktop/ETH/Courses/SS25-DSL/db',\n",
+    "    store_name='test1',   \n",
+    ")\n",
     "\n",
     "# ds = MilvusDocumentStore(\n",
     "#     embedding_model=LocalEmbeddingModel(), \n",
@@ -118,21 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropped collection milvus_dev2\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Chunking and encoding: 100%|██████████| 100/100 [00:00<00:00, 904.89it/s]\n"
+      "Chunking and encoding: 100%|██████████| 100/100 [00:00<00:00, 960.45it/s]\n"
      ]
     },
     {
@@ -146,22 +166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating embeddings: 100%|██████████| 22/22 [00:01<00:00, 15.47it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inserting final batch of 169 chunks into Milvus...\n",
-      "Indexed 100 documents in Milvus\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Generating embeddings: 100%|██████████| 22/22 [00:01<00:00, 19.49it/s]\n"
      ]
     }
    ],
@@ -172,117 +177,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'rank': 1, 'id': 'W3092462694', 'score': 0.7560622096061707},\n",
-       " {'rank': 2, 'id': 'W4385245566', 'score': 0.7221004962921143},\n",
-       " {'rank': 3, 'id': 'W3094502228', 'score': 0.7171161770820618},\n",
-       " {'rank': 4, 'id': 'W4390873371', 'score': 0.7045382261276245},\n",
-       " {'rank': 5, 'id': 'W4388692139', 'score': 0.6963192224502563},\n",
-       " {'rank': 6, 'id': 'W2963918968', 'score': 0.6889890432357788},\n",
-       " {'rank': 7, 'id': 'W4386076253', 'score': 0.68360835313797},\n",
-       " {'rank': 8, 'id': 'W3138516171', 'score': 0.6821275949478149},\n",
-       " {'rank': 9, 'id': 'W4309795819', 'score': 0.6811069846153259},\n",
-       " {'rank': 10, 'id': 'W3035024608', 'score': 0.6788714528083801},\n",
-       " {'rank': 11, 'id': 'W4287118690', 'score': 0.677408754825592},\n",
-       " {'rank': 12, 'id': 'W3035574168', 'score': 0.6723641753196716},\n",
-       " {'rank': 13, 'id': 'W3082154327', 'score': 0.6653925776481628},\n",
-       " {'rank': 14, 'id': 'W4366208220', 'score': 0.6566644906997681},\n",
-       " {'rank': 15, 'id': 'W4292779060', 'score': 0.6471208333969116},\n",
-       " {'rank': 16, 'id': 'W4386076672', 'score': 0.6430609226226807},\n",
-       " {'rank': 17, 'id': 'W4290755538', 'score': 0.6423841714859009},\n",
-       " {'rank': 18, 'id': 'W4361806831', 'score': 0.6398680806159973},\n",
-       " {'rank': 19, 'id': 'W4312545227', 'score': 0.6393106579780579},\n",
-       " {'rank': 20, 'id': 'W2565639579', 'score': 0.6380255222320557},\n",
-       " {'rank': 21, 'id': 'W2896457183', 'score': 0.6367909908294678},\n",
-       " {'rank': 22, 'id': 'W4386075854', 'score': 0.6345146894454956},\n",
-       " {'rank': 23, 'id': 'W2963446712', 'score': 0.6308642029762268},\n",
-       " {'rank': 24, 'id': 'W4312707458', 'score': 0.6301639080047607},\n",
-       " {'rank': 25, 'id': 'W4293112749', 'score': 0.6259030103683472},\n",
-       " {'rank': 26, 'id': 'W4300687381', 'score': 0.6211797595024109},\n",
-       " {'rank': 27, 'id': 'W4293250493', 'score': 0.6182164549827576},\n",
-       " {'rank': 28, 'id': 'W2928165649', 'score': 0.6179912090301514},\n",
-       " {'rank': 29, 'id': 'W4386076400', 'score': 0.6166261434555054},\n",
-       " {'rank': 30, 'id': 'W3167095230', 'score': 0.6111701726913452},\n",
-       " {'rank': 31, 'id': 'W2970987838', 'score': 0.6043542623519897},\n",
-       " {'rank': 32, 'id': 'W2962785568', 'score': 0.5996235013008118},\n",
-       " {'rank': 33, 'id': 'W3215100485', 'score': 0.5994201302528381},\n",
-       " {'rank': 34, 'id': 'W2969987486', 'score': 0.5905047655105591},\n",
-       " {'rank': 35, 'id': 'W4226305814', 'score': 0.5891635417938232},\n",
-       " {'rank': 36, 'id': 'W4376166839', 'score': 0.5799170136451721},\n",
-       " {'rank': 37, 'id': 'W4297899592', 'score': 0.5775314569473267},\n",
-       " {'rank': 38, 'id': 'W2125416623', 'score': 0.5753741264343262},\n",
-       " {'rank': 39, 'id': 'W4389665756', 'score': 0.5738945007324219},\n",
-       " {'rank': 40, 'id': 'W2963782415', 'score': 0.5670733451843262},\n",
-       " {'rank': 41, 'id': 'W2151554678', 'score': 0.5556367039680481},\n",
-       " {'rank': 42, 'id': 'W4317838087', 'score': 0.4668472111225128},\n",
-       " {'rank': 43, 'id': 'W3036587719', 'score': 0.4619467854499817},\n",
-       " {'rank': 44, 'id': 'W4225737905', 'score': 0.46024230122566223},\n",
-       " {'rank': 45, 'id': 'W4386072002', 'score': 0.45970457792282104},\n",
-       " {'rank': 46, 'id': 'W4280496682', 'score': 0.45785942673683167},\n",
-       " {'rank': 47, 'id': 'W4386076222', 'score': 0.45736902952194214},\n",
-       " {'rank': 48, 'id': 'W2194775991', 'score': 0.4549458920955658},\n",
-       " {'rank': 49, 'id': 'W4396941548', 'score': 0.45199519395828247},\n",
-       " {'rank': 50, 'id': 'W3203318343', 'score': 0.450222909450531},\n",
-       " {'rank': 51, 'id': 'W4390874817', 'score': 0.447594553232193},\n",
-       " {'rank': 52, 'id': 'W2097117768', 'score': 0.4474157392978668},\n",
-       " {'rank': 53, 'id': 'W4281665740', 'score': 0.44518765807151794},\n",
-       " {'rank': 54, 'id': 'W2619947201', 'score': 0.44474849104881287},\n",
-       " {'rank': 55, 'id': 'W2124592697', 'score': 0.44470882415771484},\n",
-       " {'rank': 56, 'id': 'W2951104886', 'score': 0.44216957688331604},\n",
-       " {'rank': 57, 'id': 'W2964081807', 'score': 0.4419001638889313},\n",
-       " {'rank': 58, 'id': 'W3118608800', 'score': 0.4417228400707245},\n",
-       " {'rank': 59, 'id': 'W2108598243', 'score': 0.43999236822128296},\n",
-       " {'rank': 60, 'id': 'W2983943451', 'score': 0.43873992562294006},\n",
-       " {'rank': 61, 'id': 'W4382464460', 'score': 0.4377976357936859},\n",
-       " {'rank': 62, 'id': 'W2963155035', 'score': 0.43648862838745117},\n",
-       " {'rank': 63, 'id': 'W4386076066', 'score': 0.43565356731414795},\n",
-       " {'rank': 64, 'id': 'W4390872833', 'score': 0.43196436762809753},\n",
-       " {'rank': 65, 'id': 'W4390874598', 'score': 0.4316430985927582},\n",
-       " {'rank': 66, 'id': 'W2986943971', 'score': 0.4314555823802948},\n",
-       " {'rank': 67, 'id': 'W4383468938', 'score': 0.43095001578330994},\n",
-       " {'rank': 68, 'id': 'W4383066393', 'score': 0.42984336614608765},\n",
-       " {'rank': 69, 'id': 'W4393149498', 'score': 0.42972710728645325},\n",
-       " {'rank': 70, 'id': 'W2549139847', 'score': 0.4289427101612091},\n",
-       " {'rank': 71, 'id': 'W4312443924', 'score': 0.4284979999065399},\n",
-       " {'rank': 72, 'id': 'W1686810756', 'score': 0.4278732240200043},\n",
-       " {'rank': 73, 'id': 'W4214530037', 'score': 0.4278465807437897},\n",
-       " {'rank': 74, 'id': 'W4390874087', 'score': 0.4263257682323456},\n",
-       " {'rank': 75, 'id': 'W4386071590', 'score': 0.42479434609413147},\n",
-       " {'rank': 76, 'id': 'W4224947594', 'score': 0.4226342439651489},\n",
-       " {'rank': 77, 'id': 'W4378468525', 'score': 0.4225216507911682},\n",
-       " {'rank': 78, 'id': 'W4214558638', 'score': 0.4186432659626007},\n",
-       " {'rank': 79, 'id': 'W4303443326', 'score': 0.41372859477996826},\n",
-       " {'rank': 80, 'id': 'W2560474170', 'score': 0.40848681330680847},\n",
-       " {'rank': 81, 'id': 'W764651262', 'score': 0.4066338837146759},\n",
-       " {'rank': 82, 'id': 'W2772709170', 'score': 0.40608081221580505},\n",
-       " {'rank': 83, 'id': 'W3207615232', 'score': 0.40596190094947815},\n",
-       " {'rank': 84, 'id': 'W4367369767', 'score': 0.40510284900665283},\n",
-       " {'rank': 85, 'id': 'W4387947367', 'score': 0.4050236940383911},\n",
-       " {'rank': 86, 'id': 'W2963857521', 'score': 0.4018300771713257},\n",
-       " {'rank': 87, 'id': 'W2962741876', 'score': 0.40166836977005005},\n",
-       " {'rank': 88, 'id': 'W2913668833', 'score': 0.401618629693985},\n",
-       " {'rank': 89, 'id': 'W1993120651', 'score': 0.3994138538837433},\n",
-       " {'rank': 90, 'id': 'W2952793010', 'score': 0.3966203033924103},\n",
-       " {'rank': 91, 'id': 'W4312307873', 'score': 0.39594054222106934},\n",
-       " {'rank': 92, 'id': 'W2083047701', 'score': 0.39532530307769775},\n",
-       " {'rank': 93, 'id': 'W4310561607', 'score': 0.3936612010002136},\n",
-       " {'rank': 94, 'id': 'W2755088640', 'score': 0.3924896717071533},\n",
-       " {'rank': 95, 'id': 'W4390874213', 'score': 0.3921252191066742},\n",
-       " {'rank': 96, 'id': 'W2908510526', 'score': 0.39141133427619934},\n",
-       " {'rank': 97, 'id': 'W2158131535', 'score': 0.3889329731464386},\n",
-       " {'rank': 98, 'id': 'W4293846201', 'score': 0.3845072388648987},\n",
-       " {'rank': 99, 'id': 'W2133665775', 'score': 0.38200974464416504},\n",
-       " {'rank': 100, 'id': 'W2222512263', 'score': 0.38171422481536865}]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -1021,9 +928,9 @@
    ],
    "source": [
     "from importlib import reload\n",
-    "from semantic_search.store import store\n",
-    "reload(store)\n",
-    "from semantic_search.store.store import FAISSDocumentStore\n",
+    "from semantic_search.store import faiss_store\n",
+    "reload(faiss_store)\n",
+    "from semantic_search.store.faiss_store import FAISSDocumentStore\n",
     "from tqdm import tqdm"
    ]
   },
@@ -1202,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
