--- a/src/semantic_search/dev/retrieval_dev.ipynb
+++ b/src/semantic_search/dev/retrieval_dev.ipynb
@@ -1040,9 +1040,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dsl-research-assistant)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "dsl-research-assistant"
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
