Added related work benchmark

--- a/src/semantic_search/dev/benchmarking_dev.ipynb
+++ b/src/semantic_search/dev/benchmarking_dev.ipynb
@@ -17,7 +17,7 @@
     "from semantic_search.data_retrieval.utils import extract_abstract_from_md\n",
     "\n",
     "df, ref_df = load_metadata(\n",
-    "    '/Users/luis/Desktop/ETH/Courses/SS25-DSL/raw-data/metadata3',\n",
+    "    '/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3',\n",
     "    filter_good_papers=True,\n",
     "    filter_good_references=True\n",
     ")\n",
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "df, ref_df = load_metadata(\n",
-    "    '/Users/luis/Desktop/ETH/Courses/SS25-DSL/raw-data/metadata3',\n",
+    "    '/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3',\n",
     "    filter_good_papers=True,\n",
     "    filter_good_references=True\n",
     ")"
@@ -611,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scp -r lcarretero@euler.ethz.ch:/Users/luis/Desktop/ETH/Courses/SS25-DSL/raw-data/metadata3 /Users/luis/Desktop/tmp"
+    "scp -r lcarretero@euler.ethz.ch:/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3 /Users/luis/Desktop/tmp"
    ]
   },
   {
@@ -754,90 +754,276 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/luis.json', 'r') as f:\n",
+    "    metadata = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "def remove_intext_citations(text: str) -> str:\n",
+    "    # Pattern matches brackets containing numbers separated by commas and optional spaces\n",
+    "    pattern = r'\\[\\s*\\d+(?:\\s*,\\s*\\d+)*\\s*\\]'\n",
+    "    return re.sub(pattern, '', text)\n",
+    "\n",
+    "benchmark_data = pd.DataFrame(metadata)\n",
+    "benchmark_data['sentence'] = benchmark_data['sentence'].apply(remove_intext_citations)\n",
+    "benchmark_data.rename(columns={'sentence': 'text', 'ref_oaids': 'references'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>ref_oaids</th>\n",
+       "      <th>paper_oaid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>In a classical geometric VO system , the main ...</td>\n",
+       "      <td>[W2151290401, W2015996585]</td>\n",
+       "      <td>W4402916116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The feature-based method  involves detecting a...</td>\n",
+       "      <td>[W2168676389, W2474281075]</td>\n",
+       "      <td>W4402916116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Supervised Methods : With the development of d...</td>\n",
+       "      <td>[W2765767940, W2598706937, W4290803068, W29587...</td>\n",
+       "      <td>W4402916116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Recent approaches use CNNs to jointly predict ...</td>\n",
+       "      <td>[W2949115101, W2905139627]</td>\n",
+       "      <td>W4402916116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Self-Supervised Methods : There also exists a ...</td>\n",
+       "      <td>[W2962816904, W2609883120, W2971000934, W29857...</td>\n",
+       "      <td>W4402916116</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            sentence  \\\n",
+       "0  In a classical geometric VO system , the main ...   \n",
+       "1  The feature-based method  involves detecting a...   \n",
+       "2  Supervised Methods : With the development of d...   \n",
+       "3  Recent approaches use CNNs to jointly predict ...   \n",
+       "4  Self-Supervised Methods : There also exists a ...   \n",
+       "\n",
+       "                                           ref_oaids   paper_oaid  \n",
+       "0                         [W2151290401, W2015996585]  W4402916116  \n",
+       "1                         [W2168676389, W2474281075]  W4402916116  \n",
+       "2  [W2765767940, W2598706937, W4290803068, W29587...  W4402916116  \n",
+       "3                         [W2949115101, W2905139627]  W4402916116  \n",
+       "4  [W2962816904, W2609883120, W2971000934, W29857...  W4402916116  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benchmark_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_citation_order(paper_ref_dict:dict):\n",
-    "    related_work = paper_ref_dict[\"related_work\"]\n",
-    "    citations = re.findall(r\"\\[[0-9, ]+\\]\", related_work)\n",
-    "    in_text_ref_dict_order = []\n",
-    "    for citation in citations:\n",
-    "        temp = ast.literal_eval(citation)\n",
-    "        in_text_ref_dict_order_i = []\n",
-    "        for i in temp:\n",
-    "            if int(i) in paper_ref_dict[\"rw_in_text_ref_nums\"]:\n",
-    "                in_text_ref_dict_order_i.append(int(i))\n",
-    "        #in_text_ref_dict_order_i = [int(i) for i in in_text_ref_dict_order_i]\n",
-    "        in_text_ref_dict_order.append(in_text_ref_dict_order_i)\n",
-    "    return in_text_ref_dict_order"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('/Users/luis/Desktop/ETH/Courses/SS25-DSL/src')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'semantic_search.utils' from '/Users/luis/Desktop/ETH/Courses/SS25-DSL/src/semantic_search/utils.py'>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from importlib import reload\n",
-    "from semantic_search import utils\n",
-    "reload(utils)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from semantic_search.utils import load_data\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "from matplotlib import pyplot as plt\n",
+    "import argparse\n",
+    "from typing import Optional, Literal\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
     "\n",
-    "df, ref_df = load_data(\n",
-    "    '/Users/luis/Desktop/ETH/Courses/SS25-DSL/raw-data/metadata3',\n",
-    "    filter_good_papers=True,\n",
-    "    filter_good_references=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Users/luis/Desktop/ETH/Courses/SS25-DSL/raw-data/Conversions/opencvf-data/txt/Bai_Fixed_Point_Diffusion_Models_CVPR_2024_paper.txt'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['fpath'][0]"
+    "\n",
+    "from semantic_search.data_retrieval.utils import extract_abstract_from_md\n",
+    "from semantic_search.store.faiss_store import FAISSDocumentStore\n",
+    "from semantic_search.store.milvus_store import MilvusDocumentStore\n",
+    "from semantic_search.utils import predict_refs_from_abstract, load_data\n",
+    "from semantic_search.benchmarking.utils import calc_metric_at_topk\n",
+    "\n",
+    "\n",
+    "def compute_prec_recall_metrics(\n",
+    "    benchmark_data: pd.DataFrame,\n",
+    "    store_name: str,\n",
+    "    store_dirpath: str,\n",
+    "    experiment_name: Optional[str] = None,\n",
+    "    search_kwargs: dict = {},\n",
+    "    store_type: Literal['faiss', 'milvus'] = 'faiss',\n",
+    "    max_top_k: int = 200\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    benchmark_data should have the following columns:\n",
+    "        text: str\n",
+    "        references: list of str\n",
+    "    \"\"\"\n",
+    "    # Assert correct benchmark data format\n",
+    "    assert all(col in benchmark_data.columns for col in ['text', 'references'])\n",
+    "    assert isinstance(benchmark_data['references'].iloc[0], list) and isinstance(benchmark_data['references'].iloc[0][0], str)\n",
+    "    assert isinstance(benchmark_data['text'].iloc[0], str)\n",
+    "\n",
+    "    # Experiment name\n",
+    "    store_name = store_name.replace('/', '_')\n",
+    "    if experiment_name is None:\n",
+    "        print(f'No experiment name provided, using store name: {store_name}')\n",
+    "        experiment_name = store_name\n",
+    "\n",
+    "    # Load document store\n",
+    "    print('Loading document store...')\n",
+    "    if store_type == 'faiss':\n",
+    "        ds = FAISSDocumentStore(db_superdir=store_dirpath, store_name=store_name)\n",
+    "        NotImplementedError('Implement available_refs for FAISS DS')\n",
+    "    elif store_type == 'milvus':\n",
+    "        ds = MilvusDocumentStore(db_superdir=store_dirpath, store_name=store_name)\n",
+    "        available_refs = set(ds.document_store.id.tolist())\n",
+    "    assert ds.load_store() # Make sure store has been initialized\n",
+    "    if store_type == 'milvus':\n",
+    "        assert ds.check_index_available()\n",
+    "\n",
+    "\n",
+    "    # Only consider references we have indexed in document store\n",
+    "    benchmark_data['GT_refs'] = benchmark_data['references'].apply(lambda refs: [ref for ref in refs if ref in available_refs])\n",
+    "\n",
+    "    # Predict references\n",
+    "    print('Predicting references...')\n",
+    "    ref_cnts = list(range(1, max_top_k + 1))\n",
+    "    results = []\n",
+    "    try:\n",
+    "        for i, row in tqdm(df.iterrows(), total=len(df), desc='Predicting references'):\n",
+    "            pred = predict_refs_from_abstract(ds, row['text'], max_n_refs=max_top_k, search_kwargs=search_kwargs)\n",
+    "            metrics = calc_metric_at_topk(row['GT_refs'], pred, ref_cnts)\n",
+    "            results.append(metrics)\n",
+    "        results_df = pd.DataFrame(results)\n",
+    "    finally:\n",
+    "        # Close store\n",
+    "        if store_type == 'milvus':\n",
+    "            ds._disconnect_client()\n",
+    "\n",
+    "    return results_df\n",
+    "\n",
+    "\n",
+    "def run_abstract_benchmark(\n",
+    "        experiment_name: str,\n",
+    "        store_name: str,\n",
+    "        metadata_dirpath: str = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3',\n",
+    "        results_dirpath: str = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/results',\n",
+    "        first_n_papers: int = -1,\n",
+    "        store_dirpath: str = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/db',\n",
+    "        store_type: Literal['faiss', 'milvus'] = 'milvus',\n",
+    "        search_kwargs: dict = {},\n",
+    "        max_n_refs: int = 200,\n",
+    "):\n",
+    "    # Load paper and reference metadata\n",
+    "    print('Loading data...')\n",
+    "    df, ref_df = load_data(metadata_dirpath, filter_good_papers=True, filter_good_references=True)\n",
+    "    df['text'] = df['fpath'].apply(extract_abstract_from_md)\n",
+    "    df = df[df.text.apply(len) > 0]\n",
+    "    df = df.iloc[:first_n_papers]\n",
+    "\n",
+    "    available_refs = set(ref_df['oaid'].str.lower().values)\n",
+    "    df['GT_refs'] = df.refs_oaids_from_dois.apply(lambda refs: [ref for ref in refs if ref in available_refs])\n",
+    "    df['available_ref_ratio'] = df.GT_refs.apply(len) / df.refs_oaids_from_dois.apply(len)\n",
+    "\n",
+    "    results_df = compute_prec_recall_metrics(\n",
+    "        benchmark_data=df,\n",
+    "        store_name=store_name,\n",
+    "        store_dirpath=store_dirpath,\n",
+    "        store_type=store_type,\n",
+    "        search_kwargs=search_kwargs,\n",
+    "        max_top_k=max_n_refs,\n",
+    "    )\n",
+    "\n",
+    "    Path(results_dirpath).mkdir(parents=True, exist_ok=True)\n",
+    "    results_df.to_csv(f'{results_dirpath}/results_{experiment_name}.csv', index=False)\n",
+    "\n",
+    "def run_related_work_benchmark(\n",
+    "        experiment_name: str,\n",
+    "        store_name: str,\n",
+    "        metadata_dirpath: str = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3',\n",
+    "        results_dirpath: str = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/results',\n",
+    "        first_n_papers: int = -1,\n",
+    "        store_dirpath: str = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/db',\n",
+    "        store_type: Literal['faiss', 'milvus'] = 'milvus',\n",
+    "        search_kwargs: dict = {},\n",
+    "        max_n_refs: int = 200,\n",
+    "):  \n",
+    "    def remove_intext_citations(text: str) -> str:\n",
+    "    # Pattern matches brackets containing numbers separated by commas and optional spaces\n",
+    "        pattern = r'\\[\\s*\\d+(?:\\s*,\\s*\\d+)*\\s*\\]'\n",
+    "        return re.sub(pattern, '', text)\n",
+    "    \n",
+    "    with open(os.path.join(metadata_dirpath, 'related_work_data.json'), 'r') as f:\n",
+    "        related_work_data = json.load(f)\n",
+    "\n",
+    "    benchmark_data = pd.DataFrame(related_work_data)\n",
+    "    benchmark_data['sentence'] = benchmark_data['sentence'].apply(remove_intext_citations)\n",
+    "    benchmark_data.rename(columns={'sentence': 'text', 'ref_oaids': 'references'}, inplace=True)\n",
+    "        \n",
+    "\n",
+    "    results_df = compute_prec_recall_metrics(\n",
+    "        benchmark_data=df,\n",
+    "        store_name=store_name,\n",
+    "        store_dirpath=store_dirpath,\n",
+    "        store_type=store_type,\n",
+    "        search_kwargs=search_kwargs,\n",
+    "        max_top_k=max_n_refs,\n",
+    "    )\n",
+    "\n",
+    "    Path(results_dirpath).mkdir(parents=True, exist_ok=True)\n",
+    "    results_df.to_csv(f'{results_dirpath}/results_{experiment_name}.csv', index=False)\n"
    ]
   },
   {
@@ -859,7 +1045,7 @@
     "import numpy as np\n",
     "\n",
     "data = []\n",
-    "for fpath in Path('/Users/luis/Desktop/ETH/Courses/SS25-DSL/raw-data/Conversions/opencvf-data/txt').glob('*.txt'):\n",
+    "for fpath in Path('/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/Conversions/opencvf-data/txt').glob('*.txt'):\n",
     "    # Read the file and extract headings\n",
     "    with open(fpath, 'r') as f:\n",
     "        content = f.read()\n",
@@ -954,6 +1140,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload\n",
+    "from semantic_search import utils\n",
+    "reload(utils)\n",
+    "from semantic_search.utils import load_data\n",
+    "df, ref_df = load_data(dirpath='/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3', filter_good_papers=True, filter_good_references=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -989,7 +1188,7 @@
     "\n",
     "store_dirpath = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/db'\n",
     "store_name = 'mini_gte'\n",
-    "metadata_dirpath = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/raw-data/metadata3'\n",
+    "metadata_dirpath = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3'\n",
     "store_type = 'milvus'\n",
     "search_kwargs = {'retrieval_method': 'hybrid'}\n",
     "first_n_papers = 200\n",
@@ -1014,13 +1213,13 @@
     "    ds = MilvusDocumentStore(db_superdir=store_dirpath, store_name=store_name)\n",
     "assert ds.load_store() # Make sure store has been initialized\n",
     "if store_type == 'milvus':\n",
-    "    assert ds._check_index_available()\n",
+    "    assert ds.check_index_available()\n",
     "\n",
     "try:\n",
     "    # Predict references\n",
     "    print('Predicting references...')\n",
-    "    max_n_refs = 200\n",
-    "    ref_cnts = list(range(1, max_n_refs + 1))\n",
+    "    max_top_k = 200\n",
+    "    ref_cnts = list(range(1, max_top_k + 1))\n",
     "    \n",
     "    results = []\n",
     "    \n",
@@ -1031,7 +1230,7 @@
     "    false_negatives = []\n",
     "    \n",
     "    for i, row in tqdm(df.iterrows(), total=len(df), desc='Predicting references'):\n",
-    "        pred = predict_refs_from_abstract(ds, row['abstract'], max_n_refs=max_n_refs, search_kwargs=search_kwargs)\n",
+    "        pred = predict_refs_from_abstract(ds, row['abstract'], max_n_refs=max_top_k, search_kwargs=search_kwargs)\n",
     "        metrics = calc_metric_at_topk(row['GT_refs'], pred, ref_cnts)\n",
     "        results.append(metrics)\n",
     "        \n",
