Added new reference metadata to retrieval script

--- a/src/semantic_search/dev/retrieval_dev.ipynb
+++ b/src/semantic_search/dev/retrieval_dev.ipynb
@@ -145,6 +145,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyalex\n",
+    "from typing import List\n",
+    "\n",
+    "id_key = 'openalex_id'\n",
+    "\n",
+    "fields_of_interest = ['id', 'doi','abstract_inverted_index', 'title', 'type', 'topics', 'cited_by_count', 'citation_normalized_percentile',\n",
+    "                          'authorships', 'publication_date', 'primary_location']\n",
+    "\n",
+    "res = pyalex.Works().filter_or(**{id_key: ['w2964350391']}).select(fields_of_interest).get(per_page=1)\n",
+    "item = res[0]\n",
+    "\n",
+    "def extract_authors(authorships: List[dict], max_n: int = 3) -> str:\n",
+    "    if len(authorships) == 0: return ''\n",
+    "\n",
+    "    raw = [author.get('author', {}).get('display_name') for author in authorships[:max_n*2]]\n",
+    "    authors = [author_name for author_name in raw if author_name is not None][:max_n]\n",
+    "    if len(authorships) > max_n:\n",
+    "        authors.append('et al.')\n",
+    "    return ', '.join(authors)\n",
+    "\n",
+    "def build_citation_str(authors: str, pub_date: str, title: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Build a citation string in APA style format.\n",
+    "    \"\"\"\n",
+    "    # APA style: Author(s) (Year). Title.\n",
+    "    return f\"{authors} ({pub_date.split('-')[0]}). {title}\"\n",
+    "\n",
+    "res = []\n",
+    "authors = extract_authors(item.get('authorships', []))\n",
+    "res.append({\n",
+    "    'oaid': item['id'].split('/')[-1] if item['id'] else None,\n",
+    "    'doi': item['doi'].split('https://doi.org/')[-1] if item['doi'] else None,\n",
+    "    'ref_via': id_key,\n",
+    "    'title': item.get('title'),\n",
+    "    'abstract': '', \n",
+    "    'type': item.get('type'), \n",
+    "    'topic': item['topics'][0]['display_name'] if item['topics'] else None,\n",
+    "    'domain': item['topics'][0]['domain']['display_name'] if item['topics'] else None,\n",
+    "    'field': item['topics'][0]['field']['display_name'] if item['topics'] else None,\n",
+    "    'subfield': item['topics'][0]['subfield']['display_name'] if item['topics'] else None,\n",
+    "    'cited_by_count': item.get('cited_by_count'),\n",
+    "    'citation_normalized_percentile': item['citation_normalized_percentile']['value'] if item['citation_normalized_percentile'] else None,\n",
+    "    'is_in_top_1_percent': item['citation_normalized_percentile']['is_in_top_1_percent'] if item['citation_normalized_percentile'] else None,\n",
+    "    'is_in_top_10_percent': item['citation_normalized_percentile']['is_in_top_10_percent'] if item['citation_normalized_percentile'] else None,\n",
+    "    'authors': extract_authors(item['authorships']),\n",
+    "    'pub_date': item.get('publication_date'),\n",
+    "    'publisher': item.get('primary_location', {}).get('source', {}).get('display_name'),\n",
+    "    'cit_str': build_citation_str(authors, item.get('publication_date', ''), item.get('title', ''))\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'oaid': 'W2964350391',\n",
+       " 'doi': '10.1609/aaai.v31i1.11231',\n",
+       " 'ref_via': 'openalex_id',\n",
+       " 'title': 'Inception-v4, Inception-ResNet and the Impact of Residual Connections on Learning',\n",
+       " 'abstract': '',\n",
+       " 'type': 'article',\n",
+       " 'topic': 'Domain Adaptation and Few-Shot Learning',\n",
+       " 'domain': 'Physical Sciences',\n",
+       " 'field': 'Computer Science',\n",
+       " 'subfield': 'Artificial Intelligence',\n",
+       " 'cited_by_count': 11774,\n",
+       " 'citation_normalized_percentile': 0.999889,\n",
+       " 'is_in_top_1_percent': True,\n",
+       " 'is_in_top_10_percent': True,\n",
+       " 'authors': 'Christian Szegedy, Sergey Ioffe, Vincent Vanhoucke, et al.',\n",
+       " 'pub_date': '2017-02-12',\n",
+       " 'publisher': 'Proceedings of the AAAI Conference on Artificial Intelligence',\n",
+       " 'cit_str': 'Christian Szegedy, Sergey Ioffe, Vincent Vanhoucke, et al. (2017). Inception-v4, Inception-ResNet and the Impact of Residual Connections on Learning'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -1045,7 +1153,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.14"
   }
  },
