Added milvusStore index rebuilding from dir

--- a/backend/src/semantic_search/dev/embeddings.ipynb
+++ b/backend/src/semantic_search/dev/embeddings.ipynb
@@ -4,6 +4,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Rebuilding Milvus index from local dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/Users/luis/Desktop/ETH/Courses/SS25-DSL/dsl-research-assistant/backend/src')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/luis/opt/anaconda3/envs/py310-arm64/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: mps\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking and encoding: 100%|██████████| 25041/25041 [00:24<00:00, 1003.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting final batch of 1434 chunks into Milvus...\n",
+      "Rebuilt Milvus collection from /Users/luis/Desktop/ETH/Courses/SS25-DSL/db/granite\n"
+     ]
+    }
+   ],
+   "source": [
+    "from semantic_search.store.milvus_store import MilvusDocumentStore\n",
+    "\n",
+    "for store_name in ['mini_gte', 'MiniLM', 'specter2_base']:\n",
+    "    ds = MilvusDocumentStore()\n",
+    "    print(f'Rebuilding {store_name}')\n",
+    "    ds.rebuild_index_from_dir(db_superdir='/Users/luis/Desktop/ETH/Courses/SS25-DSL/dsl-research-assistant/db', store_name=store_name, overwrite=False)\n",
+    "    del ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## PyMilvus dev"
    ]
   },
@@ -509,7 +578,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "py310-arm64",
    "language": "python",
    "name": "python3"
   },
